changed link and add color

--- a/LIFEE.html
+++ b/LIFEE.html
@@ -49,7 +49,7 @@
 <body>
   <center><h2>Welcome to LIFEE or Living In Full Equity and Equality.</h2></center>
   <center><p>click below to learn more.</p></center>
-<center><div class= "container"><a href= "http://localhost:8080/Final%20game/Lifeestartscreen.html"><center>
+<center><div class= "container"><a href= "Lifeestartscreen.html"><center>
 <center><div class="container">
   <center><img src="equity.png" alt="Avatar" class="image"></center>
   <div class="overlay">
