--- a/woop.html
+++ b/woop.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <meta charset="UTF-8" />
     <title>LIFEE</title>
-    <script src="Playgame.js" type= "text/javascript"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
@@ -14,9 +14,8 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
 <body>
-
 <script type="text/javascript">
-//config stuff
+
     var config = {
         type: Phaser.AUTO,
         width: 800,
@@ -35,7 +34,7 @@
             update: update
         }
     };
-//list of variables we are creating
+
     var books;
     var platforms;
     var cursors;
@@ -44,27 +43,26 @@
     var clouds;
     var scoreText;
     var player;
-    var winSent;
-    var winScore = 70;
-    var bookNumber = winScore / 10 - 1;
+    var winScore = 100 ;
+    var bookNumber = 6;
     var bookPos = [500, 1000, 1500, 2000, 2500, 3000, 3500];
     var bombs;
-    var catCallers;
-//120x156
-//makes new game
+    var signNumber = 4;
+    var signPos = [700, 1400, 2100, 2800, 3500, 4200, 4900];
+    var cars;
+
     var game = new Phaser.Game(config);
 
     function preload ()
     {
-      //loads the images needed for our game
+      //loads the images needed for our game=
       this.load.image('cloud', 'assets/lifeecloud.png');
-      this.load.image('sky', 'assets/sky.png');
+      this.load.image('sky', 'assets/lifeesky.jpg');
       this.load.image('ground', 'assets/platform.png', {frameWidth: 1000, frameHeight: 10});
       this.load.spritesheet('dude', 'assets/dudes.png', { frameWidth:51.2, frameHeight: 70});
-      this.load.image('book', 'assets/book.png');
-      this.load.image('bomb', 'assets/bomb.png');
-      this.load.image('catCaller', 'assets/catcallfinal.png');
-      this.load.image('white', 'assets/white.png');
+      this.load.image('book', 'assets/book.png.png');
+      this.load.image('bomb', 'assets/coexistsign.png');
+      this.load.image('car', 'assets/catcallfinal.png')
     }
 
     //this function does all of the creating for the game
@@ -78,95 +76,85 @@
       }
       return a;
     }
-    function hitBomb (player, bomb)
+
+    function hitCar (player, car)
     {
-        this.physics.pause();
-
-        player.setTint(0xff0000);
-
-        gameOver = true;
-      }
-      function hitCar (player, catCaller)
-      {
-        this.physics.pause();
-
-        player.setTint(0xB22222);
-
-        gameOver = true;
-
-        console.log('I hit the car');
-
-      }
+      this.physics.pause();
+      player.setTint(0xB22222);
+      gameOver = true;
+      console.log('I hit the car');
+    }
 
     function create ()
     {
-      //creates the sky
 
       this.add.image(400, 300, 'sky');
 
       platforms = this.physics.add.staticGroup();
-
-      //sets where the books and player appear from
       player = this.physics.add.sprite(70, 450, 'dude');
 
-        //if this works, it should add physics to the books so they fall to the ground and bounce randomly when they get there- there are 10 books
       books = this.physics.add.group({
-            //gravity: {y: 0},
             key: 'book',
             repeat: bookNumber,
             setXY: { x: 500, y: 400, stepX: 500, stepY: -20 },
             allowGravity: false
       });
-      //iterates that for each book they have a different bounce: the child.setBounce statement does this
-      //shuffle the bookPos list
-      i = 0;
-      books.children.iterate(function (child) {
 
-          //  Give each star a slightly different bounce
+      i = 0;
+
+      bookPos = shuffle(bookPos)
+
+      books.children.iterate(function (child) {
           child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
           child.x = bookPos[i];
           i++;
         });
 
-        bombs = this.physics.add.group();
+        player.setCollideWorldBounds(true);
+        this.physics.add.overlap(player, books, collectBook, null, this);
+
+        this.physics.add.collider(player, platforms);
+        this.physics.add.collider(books, platforms);
+
+        books.setVelocityX(-120);
+
+        bombs = this.physics.add.group({
+          key: 'bomb',
+          repeat: signNumber,
+          setXY: { x: 500, y: 400, stepX: 500, stepY: -20 },
+          allowGravity: false
+    });
+
+      i = 0;
+
+      signPos = shuffle(signPos)
+
+      bombs.children.iterate(function (child) {
+          child.setBounceY(Phaser.Math.FloatBetween(0.2, 0.4));
+          child.x = signPos[i];
+          i++;
+        });
+
+        bombs.setVelocityX(-180);
+
+        this.physics.add.overlap(player, bombs, hitBomb, null, this);
 
         this.physics.add.collider(bombs, platforms);
 
-        this.physics.add.collider(player, bombs, hitBomb, null, this);
+        cars = this.physics.add.group();
+        this.physics.add.collider(cars, platforms)
+        this.physics.add.collider(player, cars, hitCar, null, this);
 
-        catCallers = this.physics.add.group();
+        platforms.create(400, 568, 'ground').setScale(5).refreshBody();
+        player.setBounce(0.05);
 
-        this.physics.add.collider(player, catCallers, hitCar, null, this);
-
-        this.physics.add.collider(catCallers, platforms);
-
-
-
-      //creates the <ground>, referred to as platform
-      platforms.create(400, 568, 'ground').setScale(5).refreshBody();
-      //makes the books and player bounce
-      player.setBounce(0.02);
-
-      this.anims.create({
+        this.anims.create({
           key:'run',
           frames: this.anims.generateFrameNumbers('dude', { start: 1, end: 8 }),
           frameRate: 8,
           repeat: -1
-      });
+        });
 
-      //they can't go past the worldBounds
-      player.setCollideWorldBounds(true);
-
-      //checks to see if the book and the guy overlap the same space
-      this.physics.add.overlap(player, books, collectBook, null, this);
-
-      //they sit on top of the <ground>
-      this.physics.add.collider(player, platforms);
-      this.physics.add.collider(books, platforms);
-
-      books.setVelocityX(-120);
-
-      //creates the <cursors> so the cursors will be able to used later
       cursors = this.input.keyboard.createCursorKeys();
 
 
@@ -177,9 +165,8 @@
       });
 
       clouds = this.physics.add.group({
-            //gravity: {y: 0},
             key: 'cloud',
-            repeat: bookNumber,
+            repeat: 4,
             setXY: { x: 120, y: 80, stepX: 120, stepY: 20 },
             allowGravity: false
           });
@@ -188,46 +175,61 @@
                   child.setVelocityX(Phaser.Math.FloatBetween(-30, -50));
             });
 
-
-    //sets the scoreText to 32px, 16x16
       scoreText = this.add.text(16, 16,'score: 0', {fontSize: '32px', fill: '#000'});
+    }
 
-function endPage()
-{
-  this.add.image(400, 300, 'white' )
-}
-
-    }//closes the create function
-function createBomb()
+function createcar()
 {
   var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
 
-  var bomb = bombs.create(x, 16, 'bomb');
-  bomb.setBounce(.5);
-  bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
-  bomb.allowGravity = false;
+  var car = cars.create(x, 300, 'car').setScale(.3);
+  car.setVelocity(Phaser.Math.Between(-300, -100), 0);
+  car.allowGravity = true;
+
 }
 
-  function createCatCaller()
+function collectBook (player, book)
+{
+    book.disableBody(true, true);
+    score += 10;
+
+    scoreText.setText('Score: ' + score);
+    if (score % 30 == 0)
+    {
+      createcar();
+    }
+book.x=1500;
+book.enableBody(true, book.x, book.y, true, true);
+book.setVelocityX(Phaser.Math.Between(-180, -120));
+
+}
+
+function hitBomb (player, bomb)
   {
-    var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+      bomb.disableBody(true, true);
+      score -= 10;
 
-    var catCaller = catCallers.create(x, 300, 'catCaller').setScale(.3);
-    catCaller.setVelocity(Phaser.Math.Between(-300, -100), 0);
-    catCaller.allowGravity = true;
+      scoreText.setText('Score: ' + score);
 
+      bomb.x=1500;
+      bomb.enableBody(true, bomb.x, bomb.y, true, true);
+      bomb.setVelocityX(Phaser.Math.Between(-180, -160));
   }
+
 
 
     function update ()
     {
-
-      //if the game is over, return the values
       if (gameOver)
       {
-
-
           return;
+      }
+
+      if (score < 0)
+      {
+        gameOver = true;
+        this.physics.pause();
+        player.setTint(0xB22222);
       }
 
         player.setVelocityX(0);
@@ -237,52 +239,35 @@ function createBomb()
       {
           player.setVelocityY(-330);
       }
+
       books.children.iterate(function (child) {
 
         if (child.x <= -100) {
           child.x = 700
+        }
+});
+
+      bombs.children.iterate(function (child) {
+
+        if (child.x <= -100) {
+          child.x = 700
+        }
+      });
 
       clouds.children.iterate(function (child) {
 
-        if (child.x <= -100) {
-          child.x = 850
+        if (child.x <= -50) {
+          child.x = 800
         }
 
-})
-        }
-      });
-    }
-    function collectBook (player, book)
-    {
-        book.disableBody(true, true);
-
-        //  Add and update the score
-        score += 10;
-
-          scoreText.setText('Score: ' + score);
-
-        if (score % 20 == 0)
-          {
-            createBomb();
-          }
-
-
-        if (score % 30 == 0)
+        if (score === -10)
         {
-          createCatCaller();
+          document.location.href = 'losescreen.html';
         }
 
+});
 
-        if (score === winScore)
-        {
-          winSent = this.add.text(40, 60,'Congratulations! Go to the next level!', {fontSize: '32px', fill: '#000'});
-          book.disableBody(true, true);
-          player.disableBody(true, true);
-      //    cloud.disableBody(true, true);
-          //console.log("Congratulations! You can go on to the next level.")
-        }
-    }
-  //closes the collectBook function
+}
 
 </script>
 
