woop car bug/lose screen

--- a/woop.html
+++ b/woop.html
@@ -222,7 +222,7 @@ function hitBomb (player, bomb)
     {
       if (gameOver)
       {
-          return;
+          document.location.href = 'losescreen.html';
       }
 
       if (score < 0)
